--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
     </head>
     <body>
         <div class="container">
-            <div class="square"></div>
-            <div class="square"></div>
+            <header>
+                <p>header</p>
+            </header>
+            <main>
+                <div class="colors0"><p style="color: black;">A1</p></div>
+                <div class="colors1"><p>A2</p></div>
+                <div class="colors2"><p>A3</p></div>
+                <div class="colors3"><p>A4</p></div>
+                <div class="colors4"><p>A5</p></div>
+                <div class="colors5"><p>A6</p></div>
+                <div class="colors6"><p style="color: black;">B1</p></div>
+                <div class="colors7"><p>B2</p></div>
+                <div class="colors8"><p>B3</p></div>
+                <div class="colors9"><p>B4</p></div>
+            </main>
+            <footer>
+                <p>footer</p>
+            </footer>
         </div>
     </body>
 </html>
