--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     </head>
     <body>
         <div class="container">
-            <header>
+            <header> <!--Хедер і футер я зробив окремими блоками бо ці елесенти завжди
+            розтягнуті по довжині всього адаптивного блоку ( це блок Container )-->
                 <p>header</p>
             </header>
-            <main>
+            <main> <!--Двом блокам із текстом я задав чорний колір фону так як це було
+            на прикладі що нам скинули, це робиться для того щоб на світлому фоні 
+            чорний тескт був добре читабельним-->
                 <div class="colors0"><p style="color: black;">A1</p></div>
                 <div class="colors1"><p>A2</p></div>
                 <div class="colors2"><p>A3</p></div>
@@ -22,7 +25,9 @@
                 <div class="colors7"><p>B2</p></div>
                 <div class="colors8"><p>B3</p></div>
                 <div class="colors9"><p>B4</p></div>
-            </main>
+            </main> <!--Кожна адаптивна комірка має таку будову ( а саме тег Div із розміщеним у тегу P текстом ) тому що я властивостями Grid
+            задаю розміри комірок і вони піддатливо реагують на ці махінації бо є блочними елементами ,
+            а тег P розтягується по батьківському елементу тому що це рядковий елемент ( є різниця між властивостями блочних і рядкових тегів )-->
             <footer>
                 <p>footer</p>
             </footer>
